...
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_news"
        android:textColor="@android:color/white" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
...
